# Graphics-Project

./: CMakeCache.txt  CMakeLists.txt  GraphicsProject  GraphicsProject.cbp  Graphicsobj  Makefile  README.md  algos.h  cmake_install.cmake  glutfunctions.h  headers.h  loader.h  loadfromtxt.h  main.blend  main.blend1  main.cpp  main.mtl  object.txt  objectcolors.txt  renderer.h  try.txt  try1.txt  usage.h
readme/: Human Head.mkv
